--- a/eel_website/index.html
+++ b/eel_website/index.html
@@ -3,16 +3,17 @@
 <head>
   <title>EnergyLab</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+  <!--link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"-->
   <link rel="stylesheet" href="css_styles/angular-slider.min.css">
-  <link rel="stylesheet" href="css_styles/sensor_grid.css">
-  <link rel="stylesheet" href="css_styles/bootstrap.min.css">
+  <link rel="stylesheet" href="css_styles/bootstrap.min.css"> <!--used by ui.bootstrap to some bind angularjs and bootstrap-->
+  <link rel="stylesheet" href="css_styles/sensor_site.css">
+  <link rel="stylesheet" href="css_styles/custom_font.css">
+
 
 
   <script src="js_scripts/angular.min.js"></script>
   <script src="js_scripts/angular-slider.min.js"></script>
-  <script src="js_scripts/bootstrap.js"></script>
-  <script src="js_scripts/ui-bootstrap.min.js"></script>
+  <script src="js_scripts/ui-bootstrap.min.js"></script> <!--download custom version, smaller!!!-->
 
   <script src="js_scripts/init.js"></script>
   <script src="js_scripts/controllers.js"></script>
@@ -27,7 +28,7 @@
 <body style="background:#444">
 
 <div ng-controller="sensorController">
-	<header>	
+	<header>
 		<label style="color:#444">Search Name: <input ng-model="sensorFilter.name"></label>
 		<label style="color:#444">Search ID: <input ng-model="sensorFilter.sensor_id"></label>
 
@@ -36,20 +37,20 @@
 			<label class="btn btn-primary" ng-model="sensorFilter" btn-radio="'passive'">Passive</label>
 			<label class="btn btn-primary" ng-model="sensorFilter" btn-radio="'active'">Active</label>
 		</div>
-
-	    
+		<i class="fa vr-question-circle blue"></i>
 	</header>
 
-	<div style="background:#444">
-		<sensor ng-repeat="sensor in sensor_list  | filter:sensorFilter:strict" ng-click="sensorClick(sensor)" tooltip="{{sensor}}" tooltip-class="popup" tooltip-popup-delay="1000">
-			<txt_sensor_name>{{sensor.name}}</txt_sensor_name>
-			<txt_sensor_value>{{sensor.value}}</txt_sensor_value>
-			<!--txt_sensor_value>{{sensor.active}}</txt_sensor_value-->
-			<i_sensor class="fa {{sensor.icon}} {{sensor.active}}"></i_sensor>
-		</sensor>
+	<div class="sensor_container">
+		<div class="sensor" ng-repeat="sensor in sensor_list  | filter:sensorFilter:strict" ng-click="sensorClick(sensor)" tooltip="{{sensor | json}}" tooltip-class="popup" tooltip-popup-delay="1000">
+			<div class="dummy"></div>
+			<div class="sensor_data">
+				<span class="sensor_name">{{sensor.name}}</span>
+				<!--txt_sensor_value>{{sensor.active}}</txt_sensor_value-->
+				<i class="fa {{sensor.icon}} {{sensor.active}}"></i>
+				<span class="sensor_value">{{sensor.value}}{{sensor.symbol | filter_symbols}}</span>	
+			</div>
+		</div>
 	</div>
-
-
 </div>
 
 </body>
