working website, missing couple fonts though

--- a/eel_website/index.html
+++ b/eel_website/index.html
@@ -4,8 +4,8 @@
   <title>EnergyLab</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!--link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"-->
+  <link rel="stylesheet" href="css_styles/bootstrap.min.css"> 
   <link rel="stylesheet" href="css_styles/angular-slider.min.css">
-  <link rel="stylesheet" href="css_styles/bootstrap.min.css"> <!--used by ui.bootstrap to some bind angularjs and bootstrap-->
   <link rel="stylesheet" href="css_styles/sensor_site.css">
   <link rel="stylesheet" href="css_styles/custom_font.css">
 
@@ -13,7 +13,7 @@
 
   <script src="js_scripts/angular.min.js"></script>
   <script src="js_scripts/angular-slider.min.js"></script>
-  <script src="js_scripts/ui-bootstrap.min.js"></script> <!--download custom version, smaller!!!-->
+  <script src="js_scripts/ui-bootstrap.min.js"></script> <!--download custom version, smaller!!!--><!--used by ui.bootstrap to some bind angularjs and bootstrap-->
 
   <script src="js_scripts/init.js"></script>
   <script src="js_scripts/controllers.js"></script>
@@ -28,29 +28,35 @@
 <body style="background:#444">
 
 <div ng-controller="sensorController">
-	<header>
-		<label style="color:#444">Search Name: <input ng-model="sensorFilter.name"></label>
-		<label style="color:#444">Search ID: <input ng-model="sensorFilter.sensor_id"></label>
-
-		<div class="btn-group">
-			<label class="btn btn-primary" ng-model="sensorFilter" btn-radio="''">Both</label>
-			<label class="btn btn-primary" ng-model="sensorFilter" btn-radio="'passive'">Passive</label>
-			<label class="btn btn-primary" ng-model="sensorFilter" btn-radio="'active'">Active</label>
+	<nav class="navbar navbar-default navbar-fixed-top center">
+		<div class="container-fluid">
+			<label>Search Name: <input ng-model="sensorFilter.name"></label>
+			<span class="divider-vertical"></span>
+			<label>Search ID: <input ng-model="sensorFilter.sensor_id"></label>
+			<span class="divider-vertical"></span>
+			<label>Show:</label>
+			<div class="btn-group">
+				<label class="btn btn-primary" ng-model="sensorFilter" btn-radio="''">Both</label>
+				<label class="btn btn-primary" ng-model="sensorFilter" btn-radio="'passive'">Passive</label>
+				<label class="btn btn-primary" ng-model="sensorFilter" btn-radio="'active'">Active</label>
+			</div>
+			<i class="icon-vr-questionmark-circle blue"></i>
 		</div>
-		<i class="fa vr-question-circle blue"></i>
-	</header>
-
+	</nav>
+	
 	<div class="sensor_container">
 		<div class="sensor" ng-repeat="sensor in sensor_list  | filter:sensorFilter:strict" ng-click="sensorClick(sensor)" tooltip="{{sensor | json}}" tooltip-class="popup" tooltip-popup-delay="1000">
 			<div class="dummy"></div>
 			<div class="sensor_data">
 				<span class="sensor_name">{{sensor.name}}</span>
 				<!--txt_sensor_value>{{sensor.active}}</txt_sensor_value-->
-				<i class="fa {{sensor.icon}} {{sensor.active}}"></i>
-				<span class="sensor_value">{{sensor.value}}{{sensor.symbol | filter_symbols}}</span>	
+				<i class="icon-{{sensor.icon}} {{sensor.active}}"></i>
+				<span class="sensor_value" ng-if="sensor.continuous!=0">{{sensor.value}}{{sensor.symbol | filter_symbols}}</span>	
 			</div>
 		</div>
+		<div class="sensor_dummy" ng-repeat="n in [1,2,3,4,5,6,7,8,9]"></div>
 	</div>
+	
 </div>
 
 </body>
