--- a/eel_website/index.html
+++ b/eel_website/index.html
@@ -56,7 +56,7 @@
 		</div>
 		<div class="sensor_dummy" ng-repeat="n in [1,2,3,4,5,6,7,8,9]"></div>
 	</div>
-	
+	{{customers | json}}
 </div>
 
 </body>
